[package]
name = "axum-oidc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
http = "1.3.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tower = { version = "0.5.2", features = ["futures-util"] }
