[package]
name = "axum-oidc-layer"
version = "0.1.0"
edition = "2024"
description = "A high-performance, configurable OIDC authentication layer for Axum web applications"
license = "Apache-2.0"
authors = ["Andreas Diepenbrock"]
repository = "https://github.com/adiepenbrock/axum-oidc-layer"
homepage = "https://github.com/adiepenbrock/axum-oidc-layer"
documentation = "https://docs.rs/axum-oidc-layer"
readme = "README.md"
keywords = ["axum", "oidc", "jwt", "authentication", "middleware"]
categories = ["web-programming", "authentication"]
rust-version = "1.88.0"

[dependencies]
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
http = "1.3.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tower = { version = "0.5.2", features = ["futures-util"] }
